curl-with-ambassador.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-with-ambassador
  labels:
    name: curl-with-ambassador
spec:
  containers:
  - name: main
    image: tutum/curl
    command: ["sleep", "9999999"]      
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  - name: curl-with-ambassador
    image: luksa/kubectl-proxy:1.6.2
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
