curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
  - name: main
    image: tutum/curl
    command: ["sleep", "9999999"]
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
