kubia-hostport.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-hostport
  labels:
    name: kubia-hostport
spec:
  containers:
  - name: kubia
    image: luksa/kubia
    ports:
      - containerPort: 8080
        hostPort: 9000
        protocol: TCP
