kubia-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
spec:
  containers:
    - image: dpereira99/kubia
      name: kubia
      ports:
      - containerPort: 8080
        protocol: TCP
