pod-with-defaults.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-defaults
spec:
  restartPolicy: Never
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "9999999"]
