pod-with-shared-volume-fsgroup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-shared-volume-fs-group
  labels:
    name: pod-with-shared-volume-fs-group
spec:
  securityContext:
    fsGroup: 555
    supplementalGroups: [666, 777]
  containers:
    - name: first
      image: alpine
      command: ["/bin/sleep", "999999"]
      securityContext:
        runAsUser: 1111
      volumeMounts:
        - name: shared-volume
          mountPath: /volume
          readOnly: false
    - name: second
      image: alpine
      command: ["/bin/sleep", "999999"]
      securityContext:
        runAsUser: 2222
      volumeMounts:
        - name: shared-volume
          mountPath: /volume
          readOnly: false
  volumes:
    - name: shared-volume
      emptyDir:
